--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@
 
 header {
     width: 100%;
-    height: 400px;
+    height: 100vh;
     background-color: var(--back-color);
 }
 
@@ -43,7 +43,7 @@ nav h1 {
     cursor: pointer;
 }
 
-nav h1 span{
+nav h1 span {
     color: var(--second-color);
 }
 
@@ -60,9 +60,9 @@ nav .search_container input {
     color: white;
 }
 
-nav .search_container input::placeholder{
+nav .search_container input::placeholder {
     color: white;
-} 
+}
 
 nav ul {
     list-style-type: none;
@@ -107,12 +107,14 @@ nav .fa-bars:hover {
 
 @media screen and (max-width:800px) {
 
-    nav{
+    nav {
         padding: 15px 5vw;
     }
-    nav h1{
+
+    nav h1 {
         font-size: 30px;
     }
+
     nav ul,
     nav .nav_icons {
         display: none;
@@ -120,5 +122,18 @@ nav .fa-bars:hover {
 
     nav .fa-bars {
         display: block;
+    }
+}
+
+@media all and (max-width:370px) {
+    nav {
+        flex-direction: column;
+        padding: 0;
+    }
+    nav h1{
+        padding: 0;
+    }
+    nav>*{
+        margin-bottom: 20px;
     }
 }
