--- a/index.css
+++ b/index.css
@@ -17,9 +17,30 @@
     --second-color: rgb(234, 184, 48);
 }
 
+body {
+    overflow-x: hidden;
+    position: relative;
+
+}
+
+#onload_page {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
+    z-index: 100;
+    color: var(--second-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .site_container {
     width: 100%;
     height: 100vh;
+    overflow-y: hidden;
 }
 
 header {
@@ -44,19 +65,44 @@ nav {
 nav .title_container {
     /* border: 1px solid red; */
     text-align: center;
+    line-height: 35px;
+    cursor: pointer;
+
 }
+
 
 nav .title_container h1 {
     font-size: 40px;
     font-weight: 900;
-    cursor: pointer;
 }
 
 nav .title_container h2,
 nav .title_container h2 span {
     font-family: monospace;
     letter-spacing: 5px;
+    text-indent: -5px;
     text-transform: capitalize;
+
+}
+
+@keyframes title_anime {
+    0% {
+        transform: translateX(100px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes title_anime_2 {
+    0% {
+        transform: translateX(-100px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
 
 nav span {
@@ -126,7 +172,7 @@ nav .fa-bars:hover {
     color: var(--second-color);
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:900px) {
 
     nav {
         padding: 15px 5vw;
@@ -146,7 +192,7 @@ nav .fa-bars:hover {
     }
 }
 
-@media all and (max-width:370px) {
+@media all and (max-width:470px) {
     nav {
         flex-direction: column;
         padding: 0;
@@ -157,6 +203,6 @@ nav .fa-bars:hover {
     }
 
     nav>* {
-        margin-bottom: 20px;
+        margin: 10px;
     }
 }
