--- a/index.css
+++ b/index.css
@@ -88,20 +88,24 @@ nav .title_container h2 span {
 @keyframes title_anime {
     0% {
         transform: translateX(100px);
+        opacity: 0;
     }
 
     100% {
         transform: translateX(0);
+        opacity: 1;
     }
 }
 
 @keyframes title_anime_2 {
     0% {
         transform: translateX(-100px);
+        opacity: 0;
     }
 
     100% {
         transform: translateX(0);
+        opacity: 1;
     }
 }
 
