--- a/index.css
+++ b/index.css
@@ -46,10 +46,10 @@ body {
 header {
     width: 100%;
     height: 100vh;
-    /* background-color: var(--back-color); */
-    background-image: url('sofa.jpg');
+    background-color: var(--back-color);
+    /* background-image: url('sofa.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
 }
 
 nav {
@@ -58,8 +58,8 @@ nav {
     align-items: center;
     color: white;
     padding: 20px 8vw;
-    border: 1px solid rgb(158, 158, 158);
-    background-color: rgba(0, 0, 0, 0.441);
+    /* border: 1px solid rgb(158, 158, 158); */
+    /* background-color: rgba(0, 0, 0, 0.441); */
 }
 
 nav .title_container {
@@ -174,6 +174,46 @@ nav .fa-bars {
 
 nav .fa-bars:hover {
     color: var(--second-color);
+}
+
+
+
+.intro {
+    /* border: 1px solid red; */
+    margin: 100px 5vw;
+    color: white;
+
+}
+
+.intro h1 {
+    font-size: 80px;
+    color: white;
+    /* line-height:90px; */
+}
+
+.intro p {
+    width: 500px;
+    line-height: 20px;
+    text-align: justify;
+    margin-bottom: 30px;
+}
+
+.intro button {
+    background-color: transparent;
+    color: white;
+    padding: 10px 20px;
+    border: 1px solid white;
+    outline: none;
+    border-radius: 30px;
+    margin: 10px 0;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.intro button:hover{
+    background-color: var(--second-color);
+    border-color: var(--second-color);
+    color:var(--back-color)
 }
 
 @media screen and (max-width:900px) {
