--- a/index.css
+++ b/index.css
@@ -45,136 +45,16 @@ body {
 
 header {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: var(--back-color);
     /* background-image: url('sofa.jpg');
     background-position: center;
     background-size: cover; */
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    padding: 20px 8vw;
-    /* border: 1px solid rgb(158, 158, 158); */
-    /* background-color: rgba(0, 0, 0, 0.441); */
-}
-
-nav .title_container {
-    /* border: 1px solid red; */
-    text-align: center;
-    line-height: 35px;
-    cursor: pointer;
-
-}
 
 
-nav .title_container h1 {
-    font-size: 40px;
-    font-weight: 900;
-}
 
-nav .title_container h2,
-nav .title_container h2 span {
-    font-family: monospace;
-    letter-spacing: 5px;
-    text-indent: -5px;
-    text-transform: capitalize;
-
-}
-
-@keyframes title_anime {
-    0% {
-        transform: translateX(100px);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-@keyframes title_anime_2 {
-    0% {
-        transform: translateX(-100px);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-nav span {
-    color: var(--second-color);
-}
-
-nav .search_container {
-    border: 1px solid rgb(133, 133, 133);
-    border-radius: 20px;
-    padding: 1px 12px;
-}
-
-nav .search_container input {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    color: white;
-}
-
-nav .search_container input::placeholder {
-    color: white;
-}
-
-nav ul {
-    list-style-type: none;
-    cursor: pointer;
-}
-
-nav ul li {
-    display: inline-block;
-    border-bottom: 2px solid transparent;
-    margin: 0 10px;
-    transition: 0.3s;
-    font-size: 17px;
-    font-weight: 100;
-}
-
-nav ul li:hover {
-    border-bottom-color: var(--second-color);
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-}
-
-nav .nav_icons {
-    cursor: pointer;
-}
-
-nav .nav_icons i {
-    margin: 0 5px;
-}
-
-nav .nav_icons i:hover {
-    color: var(--second-color);
-}
-
-nav .fa-bars {
-    display: none;
-    font-size: 25px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-nav .fa-bars:hover {
-    color: var(--second-color);
-}
 
 
 
