--- a/index.css
+++ b/index.css
@@ -10,124 +10,31 @@
     font-family: homa;
 }
 
-
-
-:root {
-    --back-color: rgb(59, 93, 79);
-    --second-color: rgb(234, 184, 48);
-}
-
-body {
-    overflow-x: hidden;
-    position: relative;
-
-}
-
-#onload_page {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(0, 0, 0);
-    z-index: 100;
-    color: var(--second-color);
+.user_container {
+    border: 1px solid black;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
-.site_container {
-    width: 100%;
-    height: 100vh;
-    overflow-y: hidden;
-}
-
-header {
-    width: 100%;
-    /* height: 100vh; */
-    background-color: var(--back-color);
-    /* background-image: url('sofa.jpg');
-    background-position: center;
-    background-size: cover; */
-}
-
-
-
-
-
-
-
-.intro {
-    /* border: 1px solid red; */
-    color: white;
-    display: flex;
-    justify-content: center;
-    gap: 3vw;
-}
-
-.intro>* {
-    /* border: 1px solid red; */
-}
-.intro>div{
-    width: 50%;
-}
-.intro h1 {
-    font-size: 60px;
-    color: white;
-    color: var(--second-color);
-}
-
-.intro p {
-    /* width: 500px; */
-    line-height: 20px;
-    text-align: justify;
-    margin-bottom: 30px;
-}
-
-.intro button {
-    background-color: transparent;
-    color: white;
-    padding: 10px 20px;
-    border: 1px solid white;
-    outline: none;
-    border-radius: 30px;
-    margin: 10px 0;
-    transition: 0.3s;
-    cursor: pointer;
-}
-
-.intro button:hover {
-    background-color: var(--second-color);
-    border-color: var(--second-color);
-    color: var(--back-color)
-}
-
-.intro img {
-    width: 400px;
-    height: 400px;
+img {
+    border: 5px solid red;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
 }
 
-@media screen and (max-width:900px) {
-
-   
-
-    .intro {
-        gap: 0;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .intro>div{
-        width: 80%;
-    }
-
-    .intro h1{
-        font-size: 8vw;
-    }
+.user_off , .user_in{
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
-@media all and (max-width:470px) {
-    
+.hide{
+    display: none;
+}
+.products_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
 }
