--- a/index.css
+++ b/index.css
@@ -1,44 +1,20 @@
 @font-face {
-    font-family: 'homa';
+    font-family: homa;
     src: url('Far.Homa.ttf');
 }
 
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
     font-family: homa;
 }
 
-.user_container {
-    border: 1px solid black;
-    display: flex;
-    align-items: center;
+header {
+    width: 100%;
+    height: 40vw;
+    background-image: url('images/background.jpg');
+    background-position: bottom;
+    background-size: cover;
 }
 
-img {
-    border: 5px solid red;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-}
-
-.user_off,
-.user_in {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.hide {
-    display: none;
-}
-
-.products_container {
-    height: 100vh;
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
