--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
 
 header {
     width: 100%;
-    height: 40vw;
+    height: 90vh;
     background-image: url('images/background.jpg');
     background-position: bottom;
     background-size: cover;
@@ -80,7 +80,7 @@ nav>.cart_container>* {
     height: 300px;
     border: 8px solid var(--mainColor);
     border-radius: 3px;
-    margin: 80px auto;
+    margin: 60px auto;
     color: rgb(255, 255, 255);
 
 
@@ -127,10 +127,10 @@ nav>.cart_container>* {
 }
 
 .swiper {
-    width: 400PX;
+    width: 100%;
     height: 300PX;
     position: absolute;
-    top: 80%;
+    top: 75%;
     
   }
 
@@ -148,7 +148,7 @@ nav>.cart_container>* {
     display: block;
     width: 100%;
     height: 90%;
-    object-fit: cover;
+    object-fit: contain;
     background: none;
   }
   .swiper_btn{
@@ -159,4 +159,10 @@ nav>.cart_container>* {
     font-size: 15px;
     margin: 0 20px;
 
+  }
+
+  .black_section{
+    width: 100%;
+    height: 100px;
+    background-color: black;
   }
